мобыільна розиітка крім ховера

--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -13,14 +13,27 @@
     background-color: var(--primary-background-color);
     margin-bottom: 30px;
   }
-  .how-do-list-item:not(:last-child) {
-    margin-bottom: 15px;
+  .how-do-list-item {
+    max-height: 280px;
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
   }
+
   .how-do-icon {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 45px;
     height: 48px;
     margin-bottom: 30px;
     background-color: var(--primary-white-color);
+
+    fill: var(--accent-color);
+    // .how-do-card &:focus,
+    // .how-do-card &:hover {
+    //   fill: var(--primary-white-color);
+    // }
   }
   .how-do-card {
     padding-top: 30px;
@@ -30,30 +43,56 @@
     box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
   }
   .skills-title {
+    position: relative;
     font-weight: 700;
     font-size: 14px;
 
     text-align: center;
     letter-spacing: 0.08em;
     color: var(--title-text-color);
+    margin-bottom: 25px;
     &::after {
       content: '\2014';
       position: absolute;
       left: 50%;
       height: 32px;
 
-      margin-top: 20px;
+      bottom: -35px;
       font-weight: 700;
-      font-size: 20px;
+
       line-height: 1.65;
 
-      // display: flex;
       align-items: center;
       text-align: center;
       letter-spacing: 0.08em;
+      color: var(--accent-color);
+      .how-do-card &:hover,
+      .how-do-card &:focus {
+        color: var(--primary-white-color);
+      }
     }
+    // .how-do-card &:hover,
+    // .how-do-card &:focus {
+    //   color: var(--primary-white-color);
+    // }
   }
   .skills-text {
-    margin-top: 20px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.666;
+
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: var(--secondary-text-color);
+    // .how-do-card &:hover,
+    // .how-do-card &:focus {
+    //   color: var(--primary-white-color);
+    // }
+  }
+  .how-do-list :hover,
+  .how-do-list :focus {
+    background-color: var(--accent-color);
+    fill: var(--primary-white-color);
+    color: var(--primary-white-color);
   }
 }
