--- a/src/partials/page-how-do.html
+++ b/src/partials/page-how-do.html
@@ -20,7 +20,7 @@
                     <svg class="how-do-icon" width="45" height="48">
                         <use href="./images/sprite.svg#Cap"></use>
                     </svg>
-                    <h3 class="skills-title">Аудитория и онлайн-обучение</h3>
+                    <h3 class="skills-title">Аудитория и<br />онлайн-обучение</h3>
                 
                     <p class="skills-text">Учитель поможет не только в аудитории, но и во время домашней подготовки. Родители могут участвовать
                         в чате
@@ -30,12 +30,12 @@
             </li>
             <li class="how-do-list-item">
                 <div class="how-do-card">
-                <svg width="45" height="48">
+                <svg class="how-do-icon" width="45" height="48">
                     <use href="./images/sprite.svg#Book"></use>
                 </svg>
                 <h3 class="skills-title">Привычка читать на английском языке</h3>
                 
-                <p class="skills-text">Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон
+                <p class="skills-text">Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить<br />на телефон
                     дважды в
                     неделю.</p>
                 </div>
@@ -46,9 +46,8 @@
                 <svg class="how-do-icon" width="45" height="48">
                     <use href="./images/sprite.svg#Hand"></use>
                 </svg>
-                <h3 class="skills-title">Психологическая поддержка</h3>
-                <p class="skills-text">Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности
-                    в себе.</p>
+                <h3 class="skills-title">Психологическая<br /> поддержка</h3>
+                <p class="skills-text">Мы научим тебя методикам прохождения тестирований,<br />умению планировать свою<br />подготовку уверенности в себе.</p>
                 </div>
                
             </li>
@@ -58,9 +57,7 @@
                     <use href="./images/sprite.svg#Person"></use>
                 </svg>
                 <h3 class="skills-title">Обучение по авторским пособиям</h3>
-                <p class="skills-text">Тебе не нужно тратить время
-                    на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили
-                    2 пособия для тебя.</p>
+                <p class="skills-text">Тебе не нужно тратить время на самостоятельный поиск материала<br />и ничего покупать дополнительно. Мы составили 2 пособия для тебя.</p>
                 </div>
                 
             </li>
@@ -70,9 +67,7 @@
                         <use href="./images/sprite.svg#Music"></use>
                     </svg>
                     <h3 class="skills-title">Умение воспринимать устную английскуб речь</h3>
-                    <p class="skills-text">“F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать
-                        и разбирать аудиозаписи
-                        в соответствии с изучаемой лексикой.</p>
+                    <p class="skills-text">“F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать<br />и разбирать аудиозаписи в соответствии с изучаемой лексикой.</p>
                 </div>
                
             </li>
