--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,5 +6,7 @@
 // Стили для файла с примером HTML-фрагмента
 @import './example';
 @import './base/common';
+@import './base/container'; 
 @import './utils/hidden-title';
 @import './utils/variables';
+@import './utils/problems';
