--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -2,7 +2,9 @@
   font-family: Montserrat;
   font-style: normal;
   text-align: center;
-  background: rgba(17, 21, 24, 1);
+  background: url('../images/bg-tab.png') $text-dark;
+  background-repeat: no-repeat;
+  background-position: 82% 50%;
   padding: 50px 0;
 }
 
