--- a/src/partials/our-guarantees.html
+++ b/src/partials/our-guarantees.html
@@ -1,11 +1,11 @@
-<h1>Мы гарантируем</h1>
-<ul>
-    <li>Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании. Иначе мы вернем деньги.*
+<h1 class="our-guarantees__title">Мы гарантируем</h1>
+<ul class="our-guarantees__list">
+    <li class="our-guarantees__item">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании. Иначе мы вернем деньги.*
     </li>
-    <li>Ты научишься писать сочинения минимум на 10 баллов из 14. В то время как 20% учеников получили за сочинение 0.
+    <li class="our-guarantees__item">Ты научишься писать сочинения минимум на 10 баллов из 14. В то время как 20% учеников получили за сочинение 0.
     </li>
-    <li>Ты будешь заниматься в своем районе. Мы выберем место проведения занятий после формирования команд.
+    <li class="our-guarantees__item">Ты будешь заниматься в своем районе. Мы выберем место проведения занятий после формирования команд.
     </li>
-    <li>Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем особенности каждого ученика.
+    <li class="our-guarantees__item">Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем особенности каждого ученика.
     </li>
 </ul>
