--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,3 +1,10 @@
+.form {
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(./images/footer-mobile.jpg);
+}
 .footer {
   &-white {
     height: 199px;
