--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -340,6 +340,11 @@ a {
     display: block;
   }
 }
+.form {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(./images/footer-mobile.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/footer-mobile.jpg);
+}
+
 .footer-white {
   height: 199px;
   -webkit-box-pack: center;
