--- a/src/partials/our-programm.html
+++ b/src/partials/our-programm.html
@@ -1,7 +1,7 @@
 <section >
     <div class="our-programm">
         <H2 class="our-programm__h2">Наша программа</H2>
-        <ul>
+        <ul class="our-programm__list">
             <li class="our-programm__h3">1 семестр</li>
             <li class="our-programm__h4">— Grammar</li>
             <li class="our-programm__text">Nouns & Articles Adjectives & Adverb</li>
