add css for footer

--- a/src/partials/guarenty.html
+++ b/src/partials/guarenty.html
@@ -4,9 +4,9 @@
         <div class="warranty">
             <ul class="warranty-list">
                 <li class="warranty-item">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании.
-                    Иначе мы вернем деньги.<span class="warranty-orange-text">*</span></li>
+                    Иначе мы вернем деньги.<span class="orange-text">*</span></li>
                 <li class="warranty-item">Ты научишься писать сочинения минимум на 10 баллов из 14. <span
-                        class="warranty-orange-text"> В то время как 20% учеников получили за сочинение 0.</span></li>
+                        class="orange-text"> В то время как 20% учеников получили за сочинение 0.</span></li>
                 <li class="warranty-item">Ты будешь заниматься в своем районе. Мы выберем место проведения занятий после
                     формирования команд.</li>
                 <li class="warranty-item">Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем
