--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,3 +1,32 @@
+.request {
+  &-form {
+    background-image: url(../images/footer-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: 320px 507px;
+    background-position: center;
+    width: 320px;
+    height: 507px;
+    padding: 50px 20px;
+  }
+  &-title {
+    @include font(800, 14px, 1.36, 0.03em);
+    color: var(--txt-light);
+    text-align: center;
+    margin-bottom: 30px;
+    & .orange-text {
+      color: var(--txt-orange);
+    }
+  }
+  &-invite {
+    @include font(600, 12px, 1.25, 0.08em);
+    color: var(--txt-light);
+    text-align: center;
+    margin-bottom: 30px;
+    & .orange-text {
+      color: var(--txt-orange);
+    }
+  }
+}
 .footer {
   &-white {
     height: 199px;
