--- a/src/sass/_guarenty.scss
+++ b/src/sass/_guarenty.scss
@@ -19,10 +19,8 @@
       margin-bottom: 23px;
     }
   }
-  &-orange-text {
-    @include font(500, 12px, 1.67, 0.03em);
+  & .orange-text {
     color: var(--txt-orange);
-    text-align: start;
   }
 }
 .section.warranty-corect {
