--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -206,13 +206,8 @@ a {
 .warranty-item:not(:last-child) {
   margin-bottom: 23px;
 }
-.warranty-orange-text {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.67;
-  letter-spacing: 0.03em;
+.warranty .orange-text {
   color: var(--txt-orange);
-  text-align: start;
 }
 
 .section.warranty-corect {
@@ -340,6 +335,40 @@ a {
     display: block;
   }
 }
+.request-form {
+  background-image: url(../images/footer-mobile.jpg);
+  background-repeat: no-repeat;
+  background-size: 320px 507px;
+  background-position: center;
+  width: 320px;
+  height: 507px;
+  padding: 50px 20px;
+}
+.request-title {
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.36;
+  letter-spacing: 0.03em;
+  color: var(--txt-light);
+  text-align: center;
+  margin-bottom: 30px;
+}
+.request-title .orange-text {
+  color: var(--txt-orange);
+}
+.request-invite {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.08em;
+  color: var(--txt-light);
+  text-align: center;
+  margin-bottom: 30px;
+}
+.request-invite .orange-text {
+  color: var(--txt-orange);
+}
+
 .footer-white {
   height: 199px;
   -webkit-box-pack: center;
