--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -121,6 +121,7 @@
     text-transform: uppercase;
 
     color: $white;
+    cursor: pointer;
     background-color: $accent-color;
     border: 2px solid $accent-color;
     transition: 250ms $transition-timing-function all;
