--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,21 +3,21 @@
     <ul class="advantages-list">
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use href="./images/icons/sprite.svg#icon-female_student"></use>
+                <use href="./images/icons/sprite.svg#female-student-border"></use>
             </svg>
             <p class="advantages-list__disc">Адаптированная авторская
                 программа ВНО</p>
         </li>
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use href="./images/icons/sprite.svg#icon-mobile_learning" width='100%'></use>
+                <use href="./images/icons/sprite.svg#mobile-learning-border" width='100%'></use>
             </svg>
             <p class="advantages-list__disc">Современные
             методики обучения</p>
         </li>
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use href="./images/icons/sprite.svg#icon-insurance"></use>
+                <use href="./images/icons/sprite.svg#insurance-border"></use>
             </svg>
             <p class="advantages-list__disc">Финансовая гарантия
             результата</p>
