Создает мобильную версию

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -6,8 +6,9 @@
     line-height: 1.231;
     /* identical to box height */
     letter-spacing: 0.04em;
-    color: #FFFFFF;
+    color:black;
 }
+
 .header-nav-sheet{
     font-family: Montserrat;
     font-style: normal;
@@ -17,4 +18,173 @@
     /* or 36px */
     letter-spacing: 0.03em;
     color: #FFFFFF;
+}
+.header-nav-logo{
+    text-decoration: none;
+}
+.header-nav-logo-third{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 8px;
+    line-height: 1.25;
+/* identical to box height */
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+    color: #FF6B09;
+} 
+.header-nav-logo-fourth{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 8px;
+    line-height: 1.25;
+/* identical to box height */
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+    color: #111518; 
+}
+
+.header-logo-icon{
+    width: 22px;
+    height: 30px;
+    fill:#FF6B09;
+    margin: 0 4px;
+    margin-bottom: 3px;
+}
+.header-nav-logo-top{
+    display: flex;
+    align-items: center;
+}
+.header-logo-mobile-icon, .header-logo-mobile-black-icon{
+    width: 80px;
+    height: 28.5px;
+    margin-top: 30px;
+}
+.header-logo-mobile-black-icon{
+    margin-left: 20px;
+}
+
+.header-additional-menu{
+    opacity: 0;
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    height: 568px;
+    top:100%;
+    left: 0;
+    background: rgba(17, 21, 24, 0.9);
+    display: flex;
+    flex-direction: column;
+    top:0;
+    
+        &.is-open{
+            opacity: 1;
+    }
+}
+.close-menu-icon{
+    width: 40px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.close-btn-icon{
+    fill:white;
+}
+
+.close-menu-btn{
+    background-color: transparent;
+    border: none;
+    z-index: 200;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    
+}
+.header-nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}   
+.close-menu-btn .close-btn-icon{
+    display: none;
+}
+.close-menu-btn.is-open .close-btn-icon{
+    display: block;
+}
+.close-menu-btn.is-open .menu-btn-icon{
+    display: none;
+}
+.header-container{
+    position: relative;
+}
+.header-list{
+    text-decoration: none;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 180%;
+    /* or 36px */
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+} 
+.header-nav-sheet{
+    list-style-type: none;
+}
+.header-nav-list{
+    margin-top:50px;
+}
+.header-button{
+    width: 260px;
+    height: 48px;
+    margin-top: 50px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 1.25;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    color: #FF6B09;
+    border: 2px solid #FF6B09;
+    background: rgba(17, 21, 24, 0.9);
+    justify-content: center;
+}
+.header-additional-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}    
+@media screen and (min-width:100px) and (max-width:767px){
+    .header-nav-logo{
+        display: none;
+    }
+}
+@media screen and (min-width:768px){
+    .header-logo-mobile-icon, .header-logo-mobile-black-icon{
+        display: none;
+    }
+    .header{
+        position: relative;
+    }
+    .header-button{
+        position: absolute;
+        transform: translateY(-50%);
+        transform: translateX(50%);
+    }
+    .header{
+        min-height: 88px;
+        top:40px;
+    }
+    .header-nav-logo{
+        position:absolute;
+    }
 }
