--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,27 +1,46 @@
 <header class="header">
-    <div class="container">
+    <div class="container header-container">
             <nav class="header-nav">
-                <a class="header-nav-logo" href="#">
-                    <span  lang="en" class="header-nav-logo-first">Hell</span>
-                    <span lang="en" class="header-nav-logo-second">EN</span>
-                    <span class="header-nav-logo-third">Адский</span>
-                    <span class="header-nav-logo-fourth">английский</span>
-                </a>
-                <!--<button type="button" class="close-menu-btn is-open" data-menu-button>
-                    <svg class="close-menu-icon" aria-label="Переключатель мобильного меню">
-                        <use  class="close-btn-icon"  href="./symbol-defs.svg#icon-close_40px-1"></use>
-                        <use class="menu-btn-icon"  href="./symbol-defs.svg#icon-menu_40px-1"></use>
+                <a class="header-logo-mobile">
+                    <svg class="header-logo-mobile-icon">
+                        <use href="../sprite-header.svg#icon-logo"></use>
                     </svg>
-                </button>-->
-                    <div class="header-additional-menu is-open" data-menu>
-                    <ul class="header-nav-list">
-                        <li class="header-nav-sheet"><a class="header-list-programs" href="#">Программы обучения</a></li>
-                        <li class="header-nav-sheet"><a class="header-list-about_us" href="#">О нас</a></li>
-                        <li class="header-nav-sheet"><a class="header-list-variants" href="#">Варианты обучения</a></li> 
-                        <li class="header-nav-sheet"><a class="header-list-contacts" href="#">Контакты</a></li>                                
-                    </ul>
+                </a>
+                <a class="header-nav-logo" href="#">
+                    <div class="header-nav-logo-top">
+                        <span  class="header-nav-logo-first">Hell</span>
+                        <svg class="header-logo-icon">
+                            <use href="../sprite.svg#icon-fire"></use>
+                        </svg>
+                        <span  class="header-nav-logo-second">EN</span>
+                    </div>
+                    <div class="header-nav-logo-bottom">
+                        <span class="header-nav-logo-third">Адский</span>
+                        <span class="header-nav-logo-fourth">английский</span>
+                    </div>
+                </a>
+                <button type="button" class="close-menu-btn is-open" data-menu-button>
+                    <svg class="close-menu-icon" aria-label="Переключатель мобильного меню">
+                        <use  class="close-btn-icon"  href="../sprite-header.svg#icon-close_40px-1"></use>
+                        <use class="menu-btn-icon"  href="../sprite-header.svg#icon-menu_40px-1"></use>
+                    </svg>
+                </button>
+                <div class="header-additional-menu is-open" data-menu>
+                    <a class="header-logo-mobile-black">
+                        <svg class="header-logo-mobile-black-icon">
+                            <use href="../sprite-header.svg#icon-logo-1"></use>
+                        </svg>
+                    </a>
+                    <div class="header-additional-bottom">
+                        <ul class="header-nav-list">
+                            <li class="header-nav-sheet"><a class="header-list" href="#">Программы обучения</a></li>
+                            <li class="header-nav-sheet"><a class="header-list" href="#">О нас</a></li>
+                            <li class="header-nav-sheet"><a class="header-list" href="#">Варианты обучения</a></li> 
+                            <li class="header-nav-sheet"><a class="header-list" href="#">Контакты</a></li>                                
+                        </ul>
+                        <button class="header-button" type="button">Консультация по телефону</button>
+                    </div>
                 </div>
-                <button class="header-button" type="button">Консультация по телефону</button>
             </nav>                      
     </div>                    
 </header>
