--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -71,11 +71,10 @@
     height: 330px;
     padding: 30px 47px 26px 96px;
   }
-  .features-overlay .features-list {
-  }
+
   .features-overlay .features-item {
-    display: flex;
-    flex-wrap: wrap;
+    display: block;
+    /*flex-wrap: wrap;*/
 
     margin-bottom: 20px;
   }
