--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -118,11 +118,8 @@ img {
     padding: 30px 47px 26px 96px;
   }
   .features-overlay .features-item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    display: block;
+    /*flex-wrap: wrap;*/
     margin-bottom: 20px;
   }
 }
