--- a/src/sass/utils/_container.scss
+++ b/src/sass/utils/_container.scss
@@ -14,11 +14,15 @@
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding-right: 40px;
+    padding-left: 40px;
   }
 }
 
 @media screen and (min-width: 1344px) {
   .container {
     max-width: 1344px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 }
