--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,12 +3,12 @@
 
 // components
 @import './components/logo';
-@import './components/garant';
 
 // layout
 @import './layout/footer';
 @import './layout/header';
 @import './layout/hero';
+@import './layout/garant';
 
 // utils
 @import './utils/container';
