--- a/src/sass/utils/_container.scss
+++ b/src/sass/utils/_container.scss
@@ -8,6 +8,8 @@
 @media screen and (min-width: 480px) {
   .container {
     max-width: 480px;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
