--- a/src/sass/layout/_approach.scss
+++ b/src/sass/layout/_approach.scss
@@ -8,7 +8,7 @@
   text-align: center;
 }
 
-.approach-card {
+.approach-item {
   width: 280px;
   height: 280px;
   margin: 0 auto;
@@ -20,32 +20,32 @@
   transition: background-color var(--transition-function);
 }
 
-.approach-card:hover,
-.approach-card:focus {
+.approach-item:hover,
+.approach-item:focus {
   background-color: var(--accent-color);
 }
 
-.approach-card:hover .approach-icon,
-.approach-card:focus .approach-icon {
+.approach-item:hover .approach-icon,
+.approach-item:focus .approach-icon {
   fill: var(--white-color);
 }
 
-.approach-card:hover .approach-subtitle,
-.approach-card:focus .approach-subtitle {
+.approach-item:hover .approach-subtitle,
+.approach-item:focus .approach-subtitle {
   color: var(--white-color);
 }
 
-.approach-card:hover .approach-text,
-.approach-card:focus .approach-text {
+.approach-item:hover .approach-text,
+.approach-item:focus .approach-text {
   color: var(--white-color);
 }
 
-.approach-card:hover .approach-subtitle::after,
-.approach-card:focus .approach-subtitle::after {
+.approach-item:hover .approach-subtitle::after,
+.approach-item:focus .approach-subtitle::after {
   background-color: var(--white-color);
 }
 
-.approach-card:not(:last-child) {
+.approach-item:not(:last-child) {
   margin-bottom: 15px;
 }
 
