--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,6 +1,10 @@
 .request {
   &-form {
-    background-image: url(../images/footer-mobile.jpg);
+    background-image: linear-gradient(
+        rgba(17, 21, 24, 0.7),
+        rgba(17, 21, 24, 0.7)
+      ),
+      url(../images/footer-mobile.jpg);
     background-repeat: no-repeat;
     background-size: 320px 507px;
     background-position: center;
