--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -336,7 +336,8 @@ a {
   }
 }
 .request-form {
-  background-image: url(../images/footer-mobile.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(17, 21, 24, 0.7)), to(rgba(17, 21, 24, 0.7))), url(../images/footer-mobile.jpg);
+  background-image: linear-gradient(rgba(17, 21, 24, 0.7), rgba(17, 21, 24, 0.7)), url(../images/footer-mobile.jpg);
   background-repeat: no-repeat;
   background-size: 320px 507px;
   background-position: center;
