--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -9,7 +9,7 @@
                             <use href="./images/sprite.svg#icon-fire"></use>
                         </svg>
                             <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
-                                тестировании. Иначе мы вернем деньги.* 
+                                тестировании. Иначе мы вернем деньги. <span>*</span>
                             </p>
                                 
                     </li>
@@ -18,8 +18,8 @@
                         <svg class="feature-list__icon">
                             <use href="./images/sprite.svg#icon-fire"></use>
                         </svg>
-                            <p class="feature-list__description">Ты научишься писать сочинения минимум на 10 баллов из 14. В то время как
-                                30% учеников получили за сочинение 0.
+                            <p class="feature-list__description">Ты научишься писать сочинения минимум на 10 баллов из 14. 
+                               <span>В то время как 30% учеников получили за сочинение 0.</span> 
                             </p>
                             
                     </li>
