Adds new way for contact-phone in footer.

--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -6,9 +6,9 @@
   background-color: var(--primary-white-color);
 }
 
-.footer-contacts {
-  max-width: 320px;
-}
+// .footer-contacts {
+//   min-width: 320px;
+// }
 
 .logo-main-container {
   display: flex;
@@ -58,10 +58,20 @@
   margin-bottom: 4px;
 }
 
-.contact-phone {
-  display: inline-flex;
+.contact-phone-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0 auto;
   padding-bottom: 30px;
+}
+.phone-icon {
+  margin-right: 10px;
+}
+
+.contact-phone {
+  position: relative;
+  display: block;
   text-decoration: none;
   font-weight: 600;
   font-size: 14px;
@@ -69,10 +79,19 @@
   letter-spacing: 0.08em;
 
   color: var(--title-text-color);
-}
 
-.phone-icon {
-  margin-right: 10px;
+  // &:before {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   left: 30px;
+  //   margin: 0;
+  //   width: 20px;
+  //   height: 20px;
+  //   background-image: url('../images/footer/phone.svg');
+  //   background-repeat: no-repeat;
+  //   background-size: contain;
+  // }
 }
 
 .socials-link {
