Добавлена базовая разметка секции general-problem

--- a/src/partials/general-problem.html
+++ b/src/partials/general-problem.html
@@ -1,32 +1,33 @@
-<article class="example">
-  <h1>HTML-фрагменты</h1>
-
-  <p>
-    Плагин
-    <a
-      href="https://github.com/posthtml/posthtml-include"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      posthtml-include
-    </a>
-    позволяет добавлять в HTML-файлы страниц код из других HTML-файлов
-    (фрагментов). Фрагменты хранятся в папке
-    <code>src/partials</code>. Добавление происходит при компиляции файлов
-    страниц, например <code>index.html</code>.
-  </p>
-
-  <p>
-    Этот файл <code>example.html</code> &mdash; пример такого фрагмента, с
-    разметкой определённой части главной страницы. Это очень удобно при
-    командной разработке на студенческих проектах, когда в одном HTML-файле
-    пишет несколько человек сразу.
-  </p>
-
-  <p>
-    Синтаксис добавление фрагмента в главный файл:
-    <code>
-      &lt;include src="./partials/имя-файла.html"&gt;&lt;/include&gt;
-    </code>
-  </p>
-</article>
+<section>
+  <h2>Главные проблемы учеников
+    на English ВНО, которые
+    мы <span>помогаем</span> решить</h2>
+  <ul>
+    <li>
+      <h3>— 01</h3>
+      <p>Незнание грамматики</p>
+    </li>
+    <li>
+      <h3>— 02</h3>
+      <p>Неумение воcпринимать
+        устную английскую речь</p>
+    </li>
+    <li>
+      <h3>— 03</h3>
+      <p>Скупой словарный запас
+        для написании сочинения</p>
+    </li>
+    <li>
+      <h3>— 04</h3>
+      <p>Подготовка в одиночку</p>
+    </li>
+    <li>
+      <h3>— 05</h3>
+      <p>Отсутствие единого ресурса знаний</p>
+    </li>
+    <li>
+      <h3>— 06</h3>
+      <p>Недостаток самоорганизации и лень</p>
+    </li>
+  </ul>
+</section>
