--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -1,13 +1,12 @@
 .garant__title {
   font-style: normal;
   font-weight: 800;
-  font-size: 46px;
+  font-size: 26px;
   line-height: 130%;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #111518;
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   //   outline: 1px solid red;
 }
 .feature-list__description span {
@@ -17,7 +16,7 @@
 .garants .feature-list__container {
   //   outline: 1px solid teal;
   padding: 50px;
-  background-color: var(--grey-color);
+  background-color: var(--grey-bcg-color);
 }
 
 .feature-list__item:not(:last-child) {
