--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,5 +2,8 @@
   --black-color: #111518;
   --orange-color: #ff6b09;
   --white-color: #ffffff;
-  --grey-color: #f1f1f1;
+  --grey-bcg-color: #f1f1f1;
+  --grey-color: #b9b9b9;
+  --mob-grey-color: #3d3d3d;
+  --bcg-section: #e5e5e5;
 }
