--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,35 +1,50 @@
 <footer class="footer">
-  <div class="footer">
-    <h2>
-      Регистрация на <span>бесплатную</span> телефонную
-      <span>консультацию</span> по нюансам ЗНО по английскому языку
-    </h2>
-    <p>
-      Оставь заявку на участие в <span>бесплатном занятии.</span> С вами
-      свяжется консультант и ответит на вопросы
-    </p>
-    <form action="#">
-      <input type="text" name="name" placeholder="Имя*" />
-      <input type="tel" name="tel" placeholder="Телефон*" />
-      <button type="submit">хочу на бесплатное занятие</button>
-    </form>
+  <div class="container">
+    <div class="footer-wrapper">
+      <div class="footer-text-wrapper">
+        <h2 class="footer-title">
+          Регистрация на
+          <span class="footer-accent">бесплатную</span> телефонную
+          <span class="footer-accent">консультацию</span> по нюансам ЗНО по
+          английскому языку
+        </h2>
+        <p class="footer-text">
+          Оставь заявку на участие в
+          <span class="footer-accent">бесплатном занятии.</span> <br />
+          С вами свяжется консультант и ответит на вопросы
+        </p>
+      </div>
+      <form class="footer-form" action="#">
+        <label class="footer-label" for="name">Имя*</label>
+        <input class="footer-input" type="text" name="name" id="name" />
+        <label class="footer-label" for="tel">Телефон*</label>
+        <input class="footer-input" type="tel" name="tel" id="tel" />
+        <button class="footer-button" type="submit">
+          хочу на бесплатное занятие
+        </button>
+      </form>
+    </div>
+    <div class="footer-contacts">
+      <a href="#" class="logo">
+        <p class="logo_link">
+          Hell<svg class="logo_svg" height="29" width="21">
+            <use href="./images/sprite.svg#icon-fire"></use>
+          </svg>
+          EN
+        </p>
+        <p class="logo_text">
+          <span class="logo_accent">Адский</span> английский
+        </p>
+      </a>
+      <a class="footer-tel" href="tel:+380000000000">
+        <svg width="20" height="19">
+          <use href="./images/sprite.svg#icon-phone"></use></svg
+        >+38 (000) 000 00 00</a
+      >
+      <a href="#">
+        <img src="./images/instagram.svg" alt="Инстаграм" />
+      </a>
+    </div>
+    <p class="copyright">&#x00040; Все права защищены, 2019</p>
   </div>
-  <div>
-    <a href=""
-      >Hell
-      <svg>
-        <use href="../images/sprite.svg#icon-fire"></use>
-      </svg>
-      EN
-      <span>Адский английский</span>
-    </a>
-
-    <a href="tel:+380000000000">
-      <svg>
-        <use href="../images/sprite.svg#icon-phone"></use></svg
-      >+38 (000) 000 00 00</a
-    >
-    <img src="../images/instagram .svg" alt="Инстаграм" />
-  </div>
-  <p>&#x00040; Все права защищены, 2019</p>
 </footer>
