--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@
 @import './example';
 // ==============LAYOUT============
 @import './layout/header';
-@import "./layout/methods";
+@import './layout/methods';
 @import './layout/hero';
 // ==============BASE==============
 @import './base/common';
@@ -18,3 +18,4 @@
 @import './base/container';
 
 @import './teacher';
+@import './layout/footer';
