--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -1,5 +1,5 @@
 <section class="garants">
-    <!-- <div class="container"> -->
+    <div class="garants__container">
         <h1 class="garant__title">Мы гарантируем</h1>
             <div class="feature-list__container">
                 <ul class="feature-list list">
@@ -44,7 +44,7 @@
                             
                     </li>
                 </ul>
-            <!-- </div> -->
+            </div>
                 
         
         
