--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,12 +6,11 @@
         class="header-logo"
         aria-label="логотип сайта"
         data-header-logo
-      >
-        Hell
+        >Hell
         <svg width="14" height="19" class="header-fire">
           <use href="./images/icon/sprite.svg#fire"></use>
         </svg>
-        EH
+        EN
         <p class="header-logo-describe"><span>Адский</span> английский</p>
       </a>
       <button
