Adds styles for page-footer (tablet).

--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -6,22 +6,11 @@
   background-color: var(--primary-white-color);
 }
 
-// .footer-contacts {
-//   min-width: 320px;
-// }
-
 .logo-main-container {
   display: flex;
   align-items: center;
   padding: 0;
   margin: 0;
-}
-
-.logo {
-  display: inline-block;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  margin: 0 auto;
 }
 
 .logo-text {
@@ -62,10 +51,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
-  padding-bottom: 30px;
 }
+
 .phone-icon {
+  width: 20px;
+  height: 20px;
   margin-right: 10px;
 }
 
@@ -79,24 +69,10 @@
   letter-spacing: 0.08em;
 
   color: var(--title-text-color);
-
-  // &:before {
-  //   content: '';
-  //   position: absolute;
-  //   top: 0;
-  //   left: 30px;
-  //   margin: 0;
-  //   width: 20px;
-  //   height: 20px;
-  //   background-image: url('../images/footer/phone.svg');
-  //   background-repeat: no-repeat;
-  //   background-size: contain;
-  // }
 }
 
 .socials-link {
   display: block;
-  padding-bottom: 30px;
 }
 
 .socials-icon {
@@ -117,4 +93,88 @@
   line-height: 2;
 
   color: var(--secondary-text-color);
+}
+
+@media screen and (max-width: 767px) {
+  .logo {
+    display: inline-block;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: 0 auto;
+  }
+
+  .contact-phone-container {
+    margin: 0 auto;
+    padding-bottom: 30px;
+  }
+
+  .socials-link {
+    display: block;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-contacts {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0;
+  }
+
+  .logo-text {
+    font-size: 26px;
+  }
+
+  .logo-description {
+    font-size: 8px;
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+  }
+
+  .logo-accent {
+    padding-right: 6px;
+    color: var(--accent-color);
+  }
+
+  .logo-icon {
+    width: 22px;
+    height: 30px;
+    margin-bottom: 5px;
+  }
+
+  .contacts-container {
+    display: flex;
+  }
+
+  .contact-phone {
+    position: relative;
+    font-size: 20px;
+    line-height: 1.2;
+    padding-right: 24px;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: -7px;
+      margin-left: 24px;
+      width: 1px;
+      height: 40px;
+
+      background-color: var(--secondary-text-color);
+    }
+  }
+
+  .phone-icon {
+    width: 24px;
+    height: 23px;
+  }
+
+  .socials-link {
+    margin-left: 24px;
+  }
+
+  .footer-rights-text {
+    text-align: left;
+  }
 }
