--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -12,28 +12,24 @@
                 <span class="logo-accent">Адский</span>Английский
             </span>
         </a>
-        <div class="contact-phone-container">
-            <svg class="phone-icon" width="20px" height="20px">
-                <use href="./images/sprite.svg#Phone"></use>
-            </svg>
-            <a href="tel:+380000000000" class="contact-phone" aria-label="Phone">
-                <span class="phone-text">+38 (000) 000 00 00</span>
+        <div class="contacts-container">
+            <div class="contact-phone-container">
+                <svg class="phone-icon">
+                    <use href="./images/sprite.svg#Phone"></use>
+                </svg>
+                <a href="tel:+380000000000" class="contact-phone" aria-label="Phone">
+                    <span class="phone-text">+38 (000) 000 00 00</span>
+                </a>
+            </div>
+            <a href="https://www.instagram.com/" class="socials-link" aria-label="Instagram">
+                <picture>
+                    <source srcset="./images/footer/instagram.png 1x, 
+                                ./images/footer/instagram@2x.png 2x">
+                    <img class="socials-icon" src="./images/footer/instagram.png" alt="Instagram">
+                </picture>
             </a>
         </div>
-        <!-- <a href="tel:+380000000000" class="contact-phone" aria-label="Phone">
-            <svg class="phone-icon" width="20px" height="20px">
-              <use href="./images/sprite.svg#Phone"></use>
-            </svg>
-            <span class="phone-text">+38 (000) 000 00 00</span>
-        </a> -->
-        <!-- <a href="tel:+380000000000" class="contact-phone" aria-label="Phone">+38 (000) 000 00 00</a> -->
-        <a href="https://www.instagram.com/" class="socials-link" aria-label="Instagram">
-            <picture>
-                <source srcset="./images/footer/instagram.png 1x, 
-                    ./images/footer/instagram@2x.png 2x">
-                <img class="socials-icon" src="./images/footer/instagram.png" alt="Instagram">
-            </picture>
-        </a>
+
     </div>
 </div>
 <div class="footer-rights container">
