--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -8,7 +8,6 @@
     letter-spacing: 0.03em;
     margin-top: 50px;
     margin-bottom: 30px;
-    //   outline: 1px solid red;
   }
   .feature-list__description span {
     color: var(--orange-color);
@@ -42,4 +41,15 @@
     max-width: 15px;
     height: 20px;
   }
+}
+
+.comments__title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 130%;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
