Adds styles for page-footer (desktop). Final.

--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -178,3 +178,34 @@
     text-align: left;
   }
 }
+
+@media screen and (min-width: 1344px) {
+  .footer-contacts {
+    justify-content: start;
+    padding: 52px 0;
+  }
+
+  .contacts-container {
+    margin-left: 290px;
+  }
+
+  .contact-phone {
+    position: relative;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 1.233;
+    letter-spacing: 0.08em;
+    padding-right: 24px;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: -4px;
+      margin-left: 16px;
+      width: 1px;
+      height: 40px;
+
+      background-color: var(--secondary-text-color);
+    }
+  }
+}
