--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,17 +2,25 @@
     <div class="container">
         <div>
         <a href="" class="footer__logo">
+        <div class="footer-top">
+        <a href="" class="footer-top__logo">
             <span>Hell</span><span></span><span>EN</span>
             <p><span>Адский</span><span>Английский</span></p>
         </a>
         <a class="footer__link link" href="tel:+380000000000">
             <svg class="footer__icon">
                 <!-- <use href="./images/sprite.svg#phone"></use> -->
+        <a class="footer-top__link link" href="tel:+380000000000">
+            <svg class="footer-top__icon">
+                <use href="./images/sprite.svg#icon-phone"></use> 
             </svg> +38 (000) 000 00 00</a>
         <a href=""> <img src="./images/footer/footer-instagram.svg" alt="instagram"></a>
+        <a href="footer-top__link-insta"> <img src="./images/footer/footer-instagram.svg" alt="instagram"></a>
         </div>
        <div>
            <p> &#64; Все права защищены, 2019</p>
+       <div class="footer-bottom">
+           <p class="footer-bottom__copyright"> &#64; Все права защищены, 2019</p>
         </div>
     </div>
 </footer>
