--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -15,7 +15,7 @@
   }
 
   @media screen and (min-width: 1280px) {
-    height: 840;
+    height: 840px;
   }
 }
 
@@ -34,10 +34,9 @@
     background-image: url('../images/registration/registration@2x.png');
   }
 }
-
 .registration__wrapper {
   margin: 0 auto;
-  max-width: 280px;
+  // max-width: 280px;
 }
 
 .registration__description {
@@ -52,6 +51,14 @@
   &--accent {
     color: var(--accent-color);
   }
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.3;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 46px;
+  }
 }
 
 .registration__text {
@@ -65,6 +72,16 @@
 
   &--accent {
     color: var(--accent-color);
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.21;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 30px;
+    line-height: 1.23;
   }
 }
 
@@ -85,6 +102,18 @@
   color: #ffffff;
   letter-spacing: 0.08em;
   padding-left: 28px;
+
+  @media screen and (min-width: 768px) {
+    width: 390px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 478px;
+    height: 70px;
+    padding-left: 40px;
+    font-size: 20px;
+    line-height: 1.2;
+  }
 }
 
 .registration-form__input--name {
@@ -100,4 +129,9 @@
   font-size: 14px;
   line-height: 1.21;
   color: #ffffff;
+
+  @media screen and (min-width: 1280px) {
+    font-size: 20px;
+    line-height: 1.2;
+  }
 }
