--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,15 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './components/header';
+@import './components/hero';
+@import './components/products';
+@import './components/traditions';
+@import './components/reviews';
+@import './components/locations';
+@import './components/footer';
+
+
+
+
+
