--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,9 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './utils/variables';
+
+
 @import './components/header';
 @import './components/hero';
 @import './components/products';
