--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import './layout/footer';
 @import './layout/header';
 @import './layout/hero';
+@import './layout/how-we-do-it';
 
 // utils
 @import './utils/container';
