--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -50,9 +50,9 @@
                     <section class="comments">
                         <h2 class="comments__title">Отзывы выпускников</h2>
                             <div class="comments__container">
-                                <ul>
-                                    <li>
-                                        <img src="./images/comments/tonya_kucherovskaya.png" alt="фото Тоня Кучерявская">
+                                <ul class="">
+                                    <li class="comments-list__main-foto">
+                                        <img src="./images/comments/tonya_kucherovskaya.png" width="90" height="90" alt="фото Тоня Кучерявская">
                                     </li>
                                     <li>
                                         
