--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -1,3 +1,74 @@
 <section class="garants">
-    <h2 class=""> Мы гарантируем </h1>
+    <div class="garants__container">
+        <h2 class="garant__title">Мы гарантируем</h2>
+            <div class="feature-list__container">
+                <ul class="feature-list list">
+                    <li class="feature-list__item">
+
+                        <svg class="feature-list__icon">
+                            <use href="./images/sprite.svg#icon-fire"></use>
+                        </svg>
+                            <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+                                тестировании. Иначе мы вернем деньги. <span>*</span>
+                            </p>
+                                
+                    </li>
+                    <li class="feature-list__item">
+
+                        <svg class="feature-list__icon">
+                            <use href="./images/sprite.svg#icon-fire"></use>
+                        </svg>
+                            <p class="feature-list__description">Ты научишься писать сочинения минимум на 10 баллов из 14. 
+                               <span>В то время как 30% учеников получили за сочинение 0.</span> 
+                            </p>
+                            
+                    </li>
+                    <li class="feature-list__item">
+
+                        <svg class="feature-list__icon">
+                            <use href="./images/sprite.svg#icon-fire"></use>
+                        </svg>
+                            <p class="feature-list__description">Ты будешь заниматься в своем районе. Мы выберем место проведения занятий
+                                после формирования команд.
+                            </p>
+                            
+                    </li>
+                    <li class="feature-list__item">
+
+                        <svg class="feature-list__icon">
+                            <use href="./images/sprite.svg#icon-fire"></use>
+                        </svg>
+                            <p class="feature-list__description">Команды будут сформированы, исходя из начального уровня учеников. Мы
+                                учитываем особенности каждого ученика.
+                            </p>
+                            
+                    </li>
+                </ul>
+            </div>
+    </div>   
 </section>
+                    <section class="comments">
+                        <h2 class="comments__title">Отзывы выпускников</h2>
+                            <div class="comments__container">
+                                <ul class="">
+                                    <li class="comments-list__main-foto">
+                                        <img src="./images/comments/tonya_kucherovskaya.png" width="90" height="90" alt="фото Тоня Кучерявская">
+                                    </li>
+                                    <li>
+                                        
+                                    </li>
+                                    <li>
+                                        
+                                    </li>
+                                    <li>
+                                        
+                                    </li>
+                                    <li>
+                                        
+                                    </li>
+                                    <li>
+                                        
+                                    </li>
+                                </ul>
+                            </div>
+                    </section>
