--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+}
+
 h1,
 h2,
 h3,
@@ -17,7 +22,4 @@ ul,
 ol {
   padding: 0;
   margin: 0;
-}
-a {
-  text-decoration: none;
 }
