--- a/src/sass/utils/_container.scss
+++ b/src/sass/utils/_container.scss
@@ -5,20 +5,26 @@
   margin: 0 auto;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .container {
-    max-width: 480px;
+    max-width: 320px;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding-right: 40px;
+    padding-left: 40px;
   }
 }
 
 @media screen and (min-width: 1344px) {
   .container {
     max-width: 1344px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 }
