--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,18 +4,9 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './example';
 @import './utils/variables';
-
-
-@import './components/header';
-@import './components/hero';
-@import './components/products';
-@import './components/traditions';
-@import './components/reviews';
-@import './components/locations';
-@import './components/footer';
-
-
-
-
-
+@import './base/common';
+@import './utils/visually-hidden';
+@import './utils/placeholders';
+@import './utils/breakpoints';
