--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -29,3 +29,54 @@ img {
 textarea {
   resize: none;
 }
+богданСкиба, [28.01.21 10: 31] html {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.08em;
+  color: $grey;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+  outline: none;
+
+  &:hover,
+  &:focus {
+    color: $orange;
+  }
+}
+
+.orange {
+  color: $orange;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+img {
+  display: block;
+  min-width: 100%;
+  height: auto;
+}
+textarea {
+  resize: none;
+}
