--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,9 +4,10 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
 @import './utils/variables';
 @import './base/common';
 @import './utils/visually-hidden';
 @import './utils/placeholders';
 @import './utils/breakpoints';
+
+@import './components/common/container';
