--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -28,6 +28,29 @@
     line-height: 1.3;
   }
   // desktop
+  @media screen and (min-width: 1280px) {
+    font-size: 46px;
+    line-height: 1.3;
+  }
+}
+.title {
+  color: #111518;
+}
+.title--white {
+  color: #ffffff;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.3;
+  }
+
   @media screen and (min-width: 1344px) {
     font-size: 46px;
     line-height: 1.3;
