--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,13 +2,9 @@
 @import './base/common';
 
 // components
-@import './components/logo';
-
+@import './components/button';
+@import './components/title';
 // layout
-@import './layout/footer';
-@import './layout/header';
-@import './layout/hero';
-@import './layout/garant';
 
 // utils
 @import './utils/container';
