--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 @import './components/button';
 @import './components/title';
 // layout
-
+@import './layout/garant';
 // utils
 @import './utils/container';
 @import './utils/variables';
