--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -54,7 +54,7 @@
   margin-bottom: 20px;
 }
 
-.comments .comments__main-foto {
+.comments .comments-list__main-foto {
   display: block;
   text-align: center;
 }
