--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,3 +1,146 @@
-img {
-  width: 100%;
+.reviews {
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  background-color: var(--primary-white-color);
+}
+
+.reviews-title {
+  margin-bottom: 20px;
+  text-align: center;
+
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.reviews-card {
+  min-height: 564px;
+  margin-bottom: 20px;
+
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 30px;
+
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+}
+
+.reviews-card-img {
+  margin: 0 auto;
+}
+
+.reviews-card-img-wrapper {
+  margin-bottom: 20px;
+}
+
+.reviews-card-link {
+  display: block;
+  width: 30px;
+  height: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 20px;
+
+  color: var(--primary-text-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--time-function);
+
+  &:hover,
+  &:focus {
+    color: #436eab;
+  }
+}
+
+.reviews-card-icon {
+  fill: currentColor;
+}
+
+.reviews-text-wrapper {
+  text-align: center;
+}
+
+.reviews-card-title {
+  margin-bottom: 10px;
+
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+
+  color: var(--accent-color);
+}
+
+.reviews-card-subtitle {
+  margin-bottom: 10px;
+
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.219;
+  letter-spacing: 0.08em;
+
+  color: var(--second-text-color);
+}
+
+.reviews-card-text {
+  text-align: center;
+
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.666;
+  letter-spacing: 0.08em;
+
+  color: #3d3d3d;
+}
+
+.reviews-text-link {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.666;
+  letter-spacing: 0.08em;
+
+  color: var(--accent-color);
+}
+
+.reviews-slider-set {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.slider-img-set {
+  display: flex;
+  justify-content: space-between;
+  width: 182px;
+}
+
+.reviews-slider-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 54px;
+
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--time-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.slider-btn-icon {
+  fill: currentColor;
+}
+
+.slider-item:nth-last-child(-n + 4) {
+  display: none;
 }
