--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -58,3 +58,12 @@
   display: block;
   text-align: center;
 }
+.comments-list-item__name {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.214;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--orange-color);
+}
