--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -55,7 +55,7 @@
                                         <img src="./images/comments/tonya_kucherovskaya.png" width="90" height="90" alt="фото Тоня Кучерявская">
                                     </li>
                                     <li class="comments-list__item">
-                                        <h3>dfs</h3>
+                                        <h3 class="comments-list-item__name">Тоня Кучеровская</h3>
                                     </li>
                                     <li class="comments-list__item">
                                         <h3>dfs</h3>
