--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -11,6 +11,7 @@
 
   --primary-bg-color: #e5e5e5;
   --secondary-bg-color: #f1f1f1;
-  --darck-bg-color: #111518;
+  --dark-bg-color: #111518;
+
   --transition-function: 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
