add header tablet version

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,12 +7,18 @@
         aria-label="логотип сайта"
         data-header-logo
         >Hell
-        <svg width="14" height="19" class="header-fire">
+        <svg class="header-fire">
           <use href="./images/icon/sprite.svg#fire"></use>
         </svg>
         EN
-        <p class="header-logo-describe"><span>Адский</span> английский</p>
+        <p class="header-logo-describe">
+          <span class="header-logo-describe-accent">Адский</span> английский
+        </p>
       </a>
+      <button class="header-consultation-btn-tablet" type="button">
+        Консультация по телефону
+      </button>
+
       <button
         type="button"
         class="header-btn"
