review добавляет стили для tablet

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,40 +1,50 @@
 <section class="container review">
   <div class="review__section">
     <h2 class="review__title">Отзывы выпускников</h2>
-      <ul class="review__cards">
-      <li class="review__card">
-        <picture>
-          <source srcset="./images/review/img1-tx1.webp 1x, ./images/review/img1-tx2.webp 2x" media="(min-width: 768px)"
-            type="image/webp">
-          <source srcset="./images/review/img1-tx1.png 1x, ./images/review/img1-tx2.png 2x" media="(min-width: 768px)"
-            type="image/png">
-          <source srcset="./images/review/img1-mx1.webp 1x, ./images/review/img1-mx2.webp 2x" type="image/webp">
-          <img class="reviw__student-picture" src="./images/review/img1-mx1.png"
-            srcset="./images/review/img1-mx2.png 2x" alt="Тоня Кучеровская">
-        </picture>
-        <a class="review__student-contact" href="#">
-          <svg width="30" height="30">
-            <use href="./images/icon/sprite.svg#icon-vk"></use>
-          </svg>
-        </a>
-        <h3 class="review__student-name">Тоня Кучеровская</h3>
-        <p class="review__student-eduction">Выпуск 2015-го года, Національний університет біоресурсів
-          і природокористування України</p>
-        <p class="review__student-comment">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім
-          пустий словниковий запас. З першого ж
-          заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя
-          успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
-          Зараз
-          я можу похизуватись тим, що я студен ...
-          <a class="review__comment-more" href="#">Читать дальше</a>
-        </p>
-      </li>
-    </ul>
     <button class="review__button review__button--left" type="button">
       <svg width="20" height="14">
         <use href="./images/icon/sprite.svg#icon-arrow-left"></use>
       </svg>
     </button>
+      <ul class="review__cards">
+      <li class="review__card">
+       <div class="review__card-info--left">
+          <picture>
+            <source srcset="./images/review/img1-tx1.webp 1x, ./images/review/img1-tx2.webp 2x" media="(min-width: 768px)"
+              type="image/webp">
+            <source srcset="./images/review/img1-tx1.png 1x, ./images/review/img1-tx2.png 2x" media="(min-width: 768px)"
+              type="image/png">
+            <source srcset="./images/review/img1-mx1.webp 1x, ./images/review/img1-mx2.webp 2x" type="image/webp">
+            <img class="reviw__student-picture" src="./images/review/img1-mx1.png" srcset="./images/review/img1-mx2.png 2x"
+              alt="Тоня Кучеровская">
+          </picture>
+          <a class="review__student-contact" href="#">
+            <svg width="30" height="30">
+              <use href="./images/icon/sprite.svg#icon-vk"></use>
+            </svg>
+          </a>
+       </div>
+        <div class="review__card-info--right">
+          <h3 class="review__student-name">Тоня Кучеровская</h3>
+          <p class="review__student-eduction">Выпуск 2015-го года, Національний університет біоресурсів
+            і природокористування України</p>
+          <p class="review__student-comment">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім
+            пустий словниковий запас. З першого ж
+            заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя
+            успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
+            Зараз
+            я можу похизуватись тим, що я студен ...
+            <a class="review__comment-more" href="#">Читать дальше</a>
+          </p>
+        </div>
+      </li>
+    </ul>
+    <button class="review__button review__button--right" type="button">
+      <svg width="20" height="14">
+        <use href="./images/icon/sprite.svg#icon-arrow-right"></use>
+      </svg>
+    </button>
+    
     <ul class="review__students-list">
       <li class="review__student">
         <button class="review__student-button">
@@ -93,11 +103,7 @@
         </button>
       </li>
     </ul>
-    <button class="review__button review__button--right" type="button">
-      <svg width="20" height="14">
-        <use href="./images/icon/sprite.svg#icon-arrow-right"></use>
-      </svg>
-    </button>
+    
     </ul>
   </div>
 </section>
