--- a/src/sass/layouts/_reviews.scss
+++ b/src/sass/layouts/_reviews.scss
@@ -23,22 +23,51 @@
   &--right {
     right: 20px;
   }
+  @media screen and (min-width: 768px) {
+    bottom: 290px;
+  }
+  &--left {
+    left: 28px;
+  }
+  &--right {
+    right: 28px;
+  }
 }
 
 .review__title {
   @include font($font, normal, 800, 20px, 1.3);
   letter-spacing: 0.03em;
   margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    margin-bottom: 30px;
+  }
 }
 
 .review__card {
   padding: 20px 20px 30px;
   margin: 0 auto 20px;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    margin: 0 auto 30px;
+    width: 100%;
+  }
+}
+
+.review__card-info--right {
+  @media screen and (min-width: 768px) {
+    width: 412px;
+    text-align: start;
+  }
 }
 
 .reviw__student-picture {
   margin: 0 auto 20px;
+  width: 150px;
 }
 
 .review__student-contact {
@@ -47,10 +76,15 @@
 }
 
 .review__student-name {
-  @include font($font, normal, 800, 14px, 1.21);
+  @include font($font, normal, 800, 14px, 1.2);
   letter-spacing: 0.08em;
   color: $orange;
   margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
 }
 
 .review__student-eduction {
@@ -59,6 +93,9 @@
   color: $light-font;
   // margin-bottom: 10px;
   margin: 0 20px 10px;
+  @media screen and (min-width: 768px) {
+    margin: 0 0 20px;
+  }
 }
 
 .review__student-comment {
@@ -67,7 +104,7 @@
 }
 
 .review__comment-more {
-  display: block;
+  display: inline-block;
   color: $orange;
   text-decoration: underline;
 }
@@ -79,6 +116,10 @@
     width: 182px;
     overflow: hidden;
   }
+  @media screen and (min-width: 768px) {
+    width: 100%;
+    justify-content: center;
+  }
 }
 
 .review__student {
@@ -86,20 +127,20 @@
   &:not(:first-child) {
     margin-left: 10px;
   }
+  @media screen and (min-width: 768px) {
+    &:not(:first-child) {
+      margin-left: 30px;
+    }
+  }
 }
 
 .review__student-button {
   padding: 0;
   background-color: transparent;
-  border: transparent;
+  border: 1px solid transparent;
   border-radius: 50%;
   &:hover,
   &:focus {
     border: 1px solid $orange;
   }
 }
-// .review--not-mobile {
-//   @media screen and (max-width: 767px) {
-//     display: ;
-//   }
-// }
