--- a/src/sass/layout/_approach.scss
+++ b/src/sass/layout/_approach.scss
@@ -58,7 +58,7 @@
   margin: 0 auto;
   margin-bottom: 20px;
   fill: var(--accent-color);
-  transition: fill 250ms var(--transition-function);
+  transition: fill var(--transition-function);
 }
 
 .approach-subtitle {
@@ -69,7 +69,7 @@
   text-align: center;
   letter-spacing: 0.08em;
   margin-bottom: 42px;
-  transition: color 250ms var(--transition-function);
+  transition: color var(--transition-function);
 }
 
 .approach-subtitle::after {
