--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -5,7 +5,6 @@
 
 .problems-wrapper {
   position: relative;
-  border: 1px solid tomato;
 
   & .problems-title {
     font-family: $font;
@@ -25,14 +24,11 @@
 .features-overlay {
   position: absolute;
   margin-top: 27px;
-  width: 280px;
-  height: 488px;
+  max-width: 280px;
   padding: 20px 30px;
   background-color: $white-font;
 }
-.features-overlay .features-item {
-  margin-bottom: 20px;
-}
+
 .features-overlay .features-number {
   font-style: normal;
   font-weight: bold;
@@ -49,10 +45,15 @@
   letter-spacing: 0.08em;
   color: $dark-font;
 }
+@media screen and (max-width: 767px) {
+  .features-overlay .features-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .problems {
-    padding: 60px 158px 177px 42px;
+    padding: 60px 0 177px;
 
     .problems-title {
       font-family: $font;
@@ -66,16 +67,26 @@
   }
 
   .features-overlay {
-    display: flex;
-    width: 688px;
-    height: 330px;
-    padding: 30px 47px 26px 96px;
-  }
+    max-width: 688px;
+    padding: 30px 46px 26px 96px;
 
-  .features-overlay .features-item {
-    display: block;
-    /*flex-wrap: wrap;*/
+    & .features-list {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0;
+    }
 
-    margin-bottom: 20px;
+    & .features-item {
+      width: 220px;
+      width: calc((100% / 2) - 20px);
+    }
+
+    & .features-item:nth-child(-n + 4) {
+      margin-bottom: 20px;
+    }
+    & .features-text {
+      font-style: normal;
+      font-weight: 700;
+    }
   }
 }
