--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,23 +1,22 @@
-// красный цвет текста, цвет кнопок #D41443;
-// белый цвет текста,белый цвет фона #FFFFFF;
-// светло розовый цвет футера, цвет текста, цвет фона в "products" #FFB8CA;
-//  цвет фона в "products", цвет фона заглавия в контактах #F0D1A5;
-// цвет фона в "products", цвет фона заглавия в контактах #C2E297;
-// черный цвет текста #000000;
-// серый цвет текста #907E82;
-// темно розовый цвет футера #FFA5BA;
-// цвет фона секций "tradition" и "footer" #FFF5F6;
-​
-​
-$main-red-color: #D41443;
-$main-white-color: #FFFFFF;
+// красный цвет текста, цвет кнопок #D41443
+// белый цвет текста,белый цвет фона #FFFFFF
+// светло розовый цвет футера, цвет текста, цвет фона в "products" #FFB8CA
+//  цвет фона в "products", цвет фона заглавия в контактах #F0D1A5
+// цвет фона в "products", цвет фона заглавия в контактах #C2E297
+// черный цвет текста #000000
+// серый цвет текста #907E82
+// темно розовый цвет футера #FFA5BA
+// цвет фона секций "tradition" и "footer" #FFF5F6
+
+$main-red-color: #d41443;
+$main-white-color: #ffffff;
 $main-black-color: #000000;
-$main-grey-color: #907E82;
-​
-$light-pink-color: #FFB8CA;
-$dark-pink-color: #FFA5BA;
-​
-$gold-color: #F0D1A5;
-$pistachio-color: #C2E297;
-​
-$tradition-background-color: #FFF5F6;
+$main-grey-color: #907e82;
+
+$light-pink-color: #ffb8ca;
+$dark-pink-color: #ffa5ba;
+
+$gold-color: #f0d1a5;
+$pistachio-color: #c2e297;
+
+$tradition-background-color: #fff5f6;
