--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,4 @@
 
 @import './components/common/container';
 @import './components/reviews/reviews-bg-photo';
+@import './components/reviews/reviews';
